test_regress/t/t_class_param_bad2.out
%Error: t/t_class_param_bad2.v:12:4: Missing type parameter: 'PARAMB'
                                   : ... note: In instance 't'
   12 |    Cls c;   
      |    ^~~
%Error: Exiting due to
